[package]
name = "todo-worker"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.16"
serde_json = "1.0.96"
console_error_panic_hook = { version = "0.1.1", optional = true }
reqwest = "0.11.17"
image = "0.24.6"
base64 = "0.21.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
